Added button for genai

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -68,18 +68,25 @@
         android:text="Finish"
         android:textColor="@color/text_on_accent" />
 
-    <!-- THIS BUTTON IS NOW INCLUDED -->
-    <Button
-        android:id="@+id/activate_ai_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:backgroundTint="@color/accent_purple"
-        android:text="Activate Generative AI Coach"
-        android:textColor="@color/text_on_accent"
-        android:visibility="visible"
-        tools:visibility="visible" />
+<Button
+    android:id="@+id/generativeAiButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Generative AI (OFF)"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_margin="16dp"/>
 
+<ProgressBar
+    android:id="@+id/aiThinkingIndicator"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
+    <!-- THIS BUTTON IS NOW INCLUDED -->
     <TextView
         android:id="@+id/ai_feedback_text"
         android:layout_width="match_parent"
